--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -41,3 +41,15 @@ h5 {
         padding: 10px 0px;
     }
 }
+
+.todo-container {
+    max-width: 350px;
+    margin: 0 auto;
+    padding: 40px 20px;
+}
+
+.profile-container {
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 40px 20px;
+}
